--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity
-spring.datasource.username=root
-spring.datasource.password =password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+database.hibernate.url=jdbc:mysql://baconproject1.chtotgqvkjn7.us-east-2.rds.amazonaws.com:3306/BaconProject
+database.hibernate.driver=com.mysql.cj.jdbc.Driver
+database.hibernate.username=admin
+database.hibernate.password=adminadmin2
+database.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+database.hibernate.showsql=true
+
+server.port=9999
